--- a/src/app/features/tv-show-table/tv-show-table.component.html
+++ b/src/app/features/tv-show-table/tv-show-table.component.html
@@ -9,38 +9,18 @@
   </tr>
   </thead>
   <tbody>
-  <tr>
-    <td data-label="Name">Alone</td>
-    <td data-label="Country">US</td>
-    <td data-label="Year started">2015</td>
-    <td data-label="Status">Running</td>
-    <td data-label="Actions">
-      <span class="icon-info"></span>
-      <span class="icon-bookmark"></span>
-      <span class="icon-link"></span>
-    </td>
-  </tr>
-  <tr>
-    <td data-label="Name">Black Mirror</td>
-    <td data-label="Country">UK</td>
-    <td data-label="Year started">2011</td>
-    <td data-label="Status">To Be Determined</td>
-    <td data-label="Actions">
-      <span class="icon-info"></span>
-      <span class="icon-bookmark highlight"></span>
-      <span class="icon-link"></span>
-    </td>
-  </tr>
-  <tr>
-    <td data-label="Name">True Detective</td>
-    <td data-label="Country">US</td>
-    <td data-label="Year started">2014</td>
-    <td data-label="Status">Running</td>
-    <td data-label="Actions">
-      <span class="icon-info"></span>
-      <span class="icon-bookmark"></span>
-      <span class="icon-link"></span>
-    </td>
-  </tr>
+    @for (tvShow of shows; track tvShow; let i = $index) {
+      <tr>
+        <td data-label="Name">{{ tvShow.name }}</td>
+        <td data-label="Country">{{ tvShow.country }}</td>
+        <td data-label="Year started">{{ tvShow.start_date | date:'y' }}</td>
+        <td data-label="Status">{{ tvShow.status ?? 'To Be Determined' }}</td>
+        <td data-label="Actions">
+          <span class="icon-info"></span>
+          <span class="icon-bookmark" [ngClass]="{ 'highlight': i % 2 === 0 }"></span>
+          <span class="icon-link"></span>
+        </td>
+      </tr>
+    }
   </tbody>
 </table>
