--- a/src/app/pages/search-view/search-view.component.html
+++ b/src/app/pages/search-view/search-view.component.html
@@ -1,14 +1,10 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-12">
-      <form>
-        <fieldset>
-          <legend>TV Show Search</legend>
-          <label for="name">Name</label>
-          <input type="text" id="name" placeholder="Name of the show"/>
-          <button class="primary">Search</button>
-        </fieldset>
-      </form>
+      <app-tv-show-search-form
+        [query]="filterQuery()"
+        (search)="onSearch($event)"
+      ></app-tv-show-search-form>
     </div>
     </div>
     <div class="row">
