--- a/src/app/features/tv-show-table/tv-show-table.component.html
+++ b/src/app/features/tv-show-table/tv-show-table.component.html
@@ -9,18 +9,30 @@
   </tr>
   </thead>
   <tbody>
-    @for (tvShow of shows; track tvShow; let i = $index) {
+    @if (isLoading) {
       <tr>
-        <td data-label="Name">{{ tvShow.name }}</td>
-        <td data-label="Country">{{ tvShow.country }}</td>
-        <td data-label="Year started">{{ tvShow.start_date | date:'y' }}</td>
-        <td data-label="Status">{{ tvShow.status ?? 'To Be Determined' }}</td>
-        <td data-label="Actions">
-          <span class="icon-info"></span>
-          <span class="icon-bookmark" [ngClass]="{ 'highlight': i % 2 === 0 }"></span>
-          <span class="icon-link"></span>
+        <td colspan="5" style="text-align: center">
+          <div class="spinner primary"></div>
         </td>
       </tr>
+    } @else if (!shows.length) {
+      <tr>
+        <td colspan="5" style="text-align: center">No results found</td>
+      </tr>
+    } @else {
+      @for (tvShow of shows; track tvShow; let i = $index) {
+        <tr>
+          <td data-label="Name">{{ tvShow.name }}</td>
+          <td data-label="Country">{{ tvShow.country }}</td>
+          <td data-label="Year started">{{ tvShow.start_date | date:'y' }}</td>
+          <td data-label="Status">{{ tvShow.status ?? 'To Be Determined' }}</td>
+          <td data-label="Actions">
+            <span class="icon-info"></span>
+            <span class="icon-bookmark" [ngClass]="{ 'highlight': i % 2 === 0 }"></span>
+            <span class="icon-link"></span>
+          </td>
+        </tr>
+      }
     }
   </tbody>
 </table>
