--- a/src/app/pages/search-view/search-view.component.html
+++ b/src/app/pages/search-view/search-view.component.html
@@ -9,7 +9,7 @@
     </div>
     <div class="row">
       <div class="col-sm-12">
-        <app-tv-show-table [shows]="tvShows()"></app-tv-show-table>
+        <app-tv-show-table [shows]="tvShows()" [isLoading]="isLoading()"></app-tv-show-table>
       </div>
   </div>
 </div>
