--- a/src/app/features/tv-show-table/tv-show-table.component.html
+++ b/src/app/features/tv-show-table/tv-show-table.component.html
@@ -28,7 +28,13 @@
           <td data-label="Status">{{ tvShow.status ?? 'To Be Determined' }}</td>
           <td data-label="Actions">
             <span class="icon-info"></span>
-            <span class="icon-bookmark" [ngClass]="{ 'highlight': i % 2 === 0 }"></span>
+            <span
+              class="icon-bookmark"
+              [attr.data-test-id]="'action-bookmark-' + tvShow.id"
+              [ngClass]="{ 'highlight': favouritesService.isFavourite(tvShow.id)() }"
+              [title]="favouritesService.isFavourite(tvShow.id)() ? 'Remove from favourites' : 'Add to favourites'"
+              (click)="favouritesService.isFavourite(tvShow.id)() ? removeFromFavourites(tvShow, $event) : addToFavourites(tvShow, $event)"
+            ></span>
             <span class="icon-link"></span>
           </td>
         </tr>
