--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 @import "../node_modules/mini.css/dist/mini-default.min.css";
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 table:not(.horizontal) {
   overflow-x: hidden;
   max-height: fit-content;
