--- a/src/app/features/tv-show-table/tv-show-row-actions/tv-show-row-actions.component.html
+++ b/src/app/features/tv-show-table/tv-show-row-actions/tv-show-row-actions.component.html
@@ -1,23 +1,29 @@
-<div class="flex gap-1 items-center">
-  <a appButton="transparent" [routerLink]="detailsLink" [title]="tvShow.name">
-    <span class="icon-info"></span>
-  </a>
+<div class="flex gap-1 items-center row-actions">
+  <button appButton="transparent" class="!p-1">
+    <app-info-circle-icon cssClass="size-5"></app-info-circle-icon>
+  </button>
 
   <button
     appButton="transparent"
+    class="!p-1"
     [attr.data-test-id]="'action-bookmark-' + tvShow.id"
     [title]="isFavorite() ? 'Remove from favourites' : 'Add to favourites'"
     (click)="toggleFavorite($event)"
   >
-    <span
-      class="icon-bookmark"
-      [ngClass]="{
-        highlight: isFavorite()
-      }"
-    ></span>
+    <app-bookmark-icon
+      cssClass="size-5"
+      [ngClass]="{ highlight: isFavorite() }"
+    ></app-bookmark-icon>
   </button>
 
-  <button appButton="transparent">
-    <span class="icon-link"></span>
-  </button>
+  <a
+    appButton="transparent"
+    class="!p-1"
+    [routerLink]="detailsLink"
+    [title]="tvShow.name"
+  >
+    <app-arrow-top-right-on-square-icon
+      cssClass="size-5"
+    ></app-arrow-top-right-on-square-icon>
+  </a>
 </div>
