--- a/src/app/features/tv-show-table/tv-show-row-actions/tv-show-row-actions.component.html
+++ b/src/app/features/tv-show-table/tv-show-row-actions/tv-show-row-actions.component.html
@@ -1,4 +1,4 @@
-<div class="flex gap-1 items-center row-actions">
+<div class="flex gap-1 items-center row-actions text-gray-500">
   <button appButton="transparent" class="!p-1">
     <app-info-circle-icon cssClass="size-5"></app-info-circle-icon>
   </button>
