--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,14 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  @apply scroll-smooth;
+}
+
+body {
+  @apply font-normal text-base bg-gray-50 text-gray-700;
+}
+
 .app-button {
   @apply p-2 inline-flex items-center rounded disabled:opacity-25 transition-colors duration-75;
 }
@@ -17,13 +25,4 @@
 
 .app-button-transparent {
   @apply hover:bg-gray-100 active:bg-gray-200;
-}
-
-table:not(.horizontal) {
-  overflow-x: hidden;
-  max-height: fit-content;
-}
-
-span.icon-bookmark.highlight {
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='gold' stroke='%23111' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath d='M19 21l-7-5-7 5V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2z'%3E%3C/path%3E%3C/svg%3E");
 }
