--- a/src/app/pages/details-view/details-view.component.html
+++ b/src/app/pages/details-view/details-view.component.html
@@ -1,1 +1,13 @@
-<p>details-view works!</p>
+<div class="container">
+  @if (data && data.details) {
+    <app-tv-show-details [details]="data.details"></app-tv-show-details>
+  } @else {
+    <app-error-placeholder
+      [message]="data.resolveErrorMessage"
+    ></app-error-placeholder>
+  }
+
+  <div class="mt-4">
+    <app-back-button></app-back-button>
+  </div>
+</div>
