--- a/src/app/features/tv-show-details/tv-show-details.component.html
+++ b/src/app/features/tv-show-details/tv-show-details.component.html
@@ -5,8 +5,10 @@
   </h1>
 </div>
 
-<div class="flex gap-4 p-4 bg-white border-b-2">
-  <div class="flex flex-col shrink-0 gap-4">
+<div class="flex flex-col md:flex-row gap-4">
+  <div
+    class="flex flex-col shrink-0 gap-4 items-center mb-4 md:mb-0 p-4 bg-white border-b-2"
+  >
     <img
       [src]="details.image_path"
       [alt]="details.name"
@@ -19,7 +21,7 @@
     </div>
   </div>
 
-  <div class="flex-1">
+  <div class="flex-1 p-4 bg-white border-b-2">
     <div [innerHTML]="details.description"></div>
   </div>
 </div>
