--- a/src/app/pages/favorites-view/favorites-view.component.html
+++ b/src/app/pages/favorites-view/favorites-view.component.html
@@ -1,1 +1,9 @@
-<p>favorites-view works!</p>
+<div class="container">
+  <div
+    class="grid gap-4 grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5 2xl:grid-cols-6"
+  >
+    @for (oneTvShow of tvShows(); track oneTvShow.id) {
+      <app-tv-show-card [tvShow]="oneTvShow"></app-tv-show-card>
+    }
+  </div>
+</div>
