Toggling favorites from tv show card component.

--- a/src/app/features/tv-show-card/tv-show-card.component.html
+++ b/src/app/features/tv-show-card/tv-show-card.component.html
@@ -9,7 +9,7 @@
       </h2>
 
       <div class="flex flex-row">
-        <button appButton="transparent" class="!p-1">
+        <button appButton="transparent" class="!p-1" (click)="toggleFavorite()">
           <app-bookmark-icon
             [ngClass]="{ highlight: isFavorite() }"
           ></app-bookmark-icon>
