Sorting favorite tv shows by status and next episode air date.

--- a/src/app/features/tv-shows/components/tv-show-card/tv-show-card.component.html
+++ b/src/app/features/tv-shows/components/tv-show-card/tv-show-card.component.html
@@ -40,7 +40,7 @@
         {{ nextEpisode()!.air_date | date: "short" }}
       </span>
     } @else {
-      <span class="text-gray-400"> All episodes have been released </span>
+      <span class="text-gray-400">{{ tvShow().status }}</span>
     }
   </ng-template>
 </app-card>
