UX & Styling improvements.

--- a/src/app/features/tv-shows/components/favorite-tv-shows-list/favorite-tv-shows-list.component.html
+++ b/src/app/features/tv-shows/components/favorite-tv-shows-list/favorite-tv-shows-list.component.html
@@ -1,10 +1,15 @@
-<div
-  class="grid gap-4 grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5 2xl:grid-cols-6"
->
-  @for (oneTvShow of favorites(); track oneTvShow.id) {
-    <app-tv-show-card
-      [tvShow]="oneTvShow"
-      [nextEpisode]="(oneTvShow | nextEpisode) ?? undefined"
-    ></app-tv-show-card>
-  }
-</div>
+@if (favorites().length) {
+  <div
+    class="grid gap-4 grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5 2xl:grid-cols-6"
+  >
+    @for (oneTvShow of favorites(); track oneTvShow.id) {
+      <app-tv-show-card
+        [tvShow]="oneTvShow"
+        [nextEpisode]="(oneTvShow | nextEpisode) ?? undefined"
+      ></app-tv-show-card>
+    }
+  </div>
+} @else {
+  <app-empty-collection-placeholder message="You have no favorite tv shows.">
+  </app-empty-collection-placeholder>
+}
