--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,27 +1,32 @@
-<header class="flex items-center gap-8 bg-white border-b-4 mb-8 shadow">
-  <div class="p-4">
-    <a [routerLink]="HOME_LINK" class="font-bold">TV Show Tracker</a>
-  </div>
-
-  <div class="flex gap-1 items-center">
+<header class="bg-white border-b-4 mb-8 shadow">
+  <div class="container flex items-center gap-8">
     <a
-      [routerLink]="SEARCH_LINK"
-      routerLinkActive="active"
-      [routerLinkActiveOptions]="{ exact: true }"
-      class="menu-link"
-      title="Search"
+      [routerLink]="HOME_LINK"
+      class="hidden md:block p-4 font-bold hover:bg-gray-50"
     >
-      Search
+      TV Show Tracker
     </a>
 
-    <a
-      [routerLink]="FAVORITES_LINK"
-      routerLinkActive="active"
-      class="menu-link"
-      title="My favorites"
-    >
-      My favorites
-    </a>
+    <div class="flex gap-1 items-center">
+      <a
+        [routerLink]="SEARCH_LINK"
+        routerLinkActive="active"
+        [routerLinkActiveOptions]="{ exact: true }"
+        class="menu-link"
+        title="Search"
+      >
+        Search
+      </a>
+
+      <a
+        [routerLink]="FAVORITES_LINK"
+        routerLinkActive="active"
+        class="menu-link"
+        title="My favorites"
+      >
+        My favorites
+      </a>
+    </div>
   </div>
 </header>
 
