--- a/src/styles.css
+++ b/src/styles.css
@@ -26,3 +26,12 @@ body {
 .app-button-transparent {
   @apply hover:bg-gray-100 active:bg-gray-200;
 }
+
+/* App form styles */
+.app-form-control {
+  @apply rounded-md border-gray-300 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50;
+}
+
+.app-form-control.ng-invalid.ng-dirty {
+  @apply border-red-300 focus:ring-red-200;
+}
