Next episode countdown pipe implementation.

--- a/src/app/features/tv-shows/components/tv-show-card/tv-show-card.component.html
+++ b/src/app/features/tv-shows/components/tv-show-card/tv-show-card.component.html
@@ -34,13 +34,6 @@
   </ng-template>
 
   <ng-template #footer>
-    @if (nextEpisode()?.air_date) {
-      <span>Next episode: </span>
-      <span class="font-bold">
-        {{ nextEpisode()!.air_date | date: "short" }}
-      </span>
-    } @else {
-      <span class="text-gray-400">{{ tvShow().status }}</span>
-    }
+    {{ tvShow() | nextEpisodeCountdown }}
   </ng-template>
 </app-card>
