--- a/src/app/features/tv-shows/components/tv-show-table/tv-show-row-actions/tv-show-row-actions.component.html
+++ b/src/app/features/tv-shows/components/tv-show-table/tv-show-row-actions/tv-show-row-actions.component.html
@@ -6,9 +6,9 @@
   <button
     appButton="transparent"
     class="!p-1"
+    [appToggleFavoriteTvShow]="tvShow"
     [attr.data-test-id]="'action-bookmark-' + tvShow.id"
     [title]="isFavorite() ? 'Remove from favourites' : 'Add to favourites'"
-    (click)="toggleFavorite($event)"
   >
     <app-bookmark-icon
       cssClass="size-5"
