ToggleFavoriteTvShow directive - adding highlight css class and title. Simplified dependencies.

--- a/src/app/features/tv-shows/components/tv-show-card/tv-show-card.component.html
+++ b/src/app/features/tv-shows/components/tv-show-card/tv-show-card.component.html
@@ -14,9 +14,7 @@
           class="!p-1"
           [appToggleFavoriteTvShow]="tvShow()"
         >
-          <app-bookmark-icon
-            [ngClass]="{ highlight: isFavorite() }"
-          ></app-bookmark-icon>
+          <app-bookmark-icon></app-bookmark-icon>
         </button>
 
         <button appButton="transparent" class="!p-1">
