--- a/src/app/features/tv-shows/components/tv-show-table/tv-show-row-actions/tv-show-row-actions.component.html
+++ b/src/app/features/tv-shows/components/tv-show-table/tv-show-row-actions/tv-show-row-actions.component.html
@@ -8,12 +8,8 @@
     class="!p-1"
     [appToggleFavoriteTvShow]="tvShow"
     [attr.data-test-id]="'action-bookmark-' + tvShow.id"
-    [title]="isFavorite() ? 'Remove from favourites' : 'Add to favourites'"
   >
-    <app-bookmark-icon
-      cssClass="size-5"
-      [ngClass]="{ highlight: isFavorite() }"
-    ></app-bookmark-icon>
+    <app-bookmark-icon cssClass="size-5"></app-bookmark-icon>
   </button>
 
   <a
