Connected paginator to tv shows table.

--- a/src/app/pages/search-view/search-view.component.html
+++ b/src/app/pages/search-view/search-view.component.html
@@ -10,6 +10,7 @@
     <app-paginator
       [totalPages]="totalPages()"
       [(currentPage)]="currentPage"
+      (currentPageChange)="onPageChange()"
     ></app-paginator>
   </div>
 
