Integrated tv shows table paginator with route query params and data service.

--- a/src/app/pages/search-page/search-page.component.html
+++ b/src/app/pages/search-page/search-page.component.html
@@ -8,8 +8,8 @@
 <div class="mb-4">
   <app-paginator
     [totalPages]="totalPages()"
-    [(currentPage)]="currentPage"
-    (currentPageChange)="onPageChange()"
+    [currentPage]="currentPage()"
+    (currentPageChange)="onPageChange($event)"
   ></app-paginator>
 </div>
 
@@ -23,7 +23,7 @@
 <div class="mb-4">
   <app-paginator
     [totalPages]="totalPages()"
-    [(currentPage)]="currentPage"
-    (currentPageChange)="onPageChange()"
+    [currentPage]="currentPage()"
+    (currentPageChange)="onPageChange($event)"
   ></app-paginator>
 </div>
