Photo icon component & "Show images" button on details page.

--- a/src/app/pages/details-page/details-page.component.html
+++ b/src/app/pages/details-page/details-page.component.html
@@ -6,6 +6,12 @@
   ></app-error-placeholder>
 }
 
-<div class="mt-4">
+<div class="mt-4 flex flex-row gap-4">
+  <button appButton="primary" class="gap-4 !px-4">
+    <app-photo-icon cssClass="size-4"></app-photo-icon>
+
+    <span>Show images</span>
+  </button>
+
   <app-back-button></app-back-button>
 </div>
