Gallery slides show component implementation.

--- a/src/app/shared/dialogs/components/dialog/dialog.component.html
+++ b/src/app/shared/dialogs/components/dialog/dialog.component.html
@@ -10,7 +10,12 @@
           }
         </div>
 
-        <button appButton="transparent" class="dialog-close" (click)="close()">
+        <button
+          appButton="transparent"
+          class="dialog-close"
+          (click)="close()"
+          title="Close"
+        >
           <app-close-icon cssClass="size-4"></app-close-icon>
         </button>
       </div>
