--- a/src/app/pages/details-page/details-page.component.html
+++ b/src/app/pages/details-page/details-page.component.html
@@ -1,8 +1,8 @@
-@if (data && data.details) {
-  <app-tv-show-details [details]="data.details"></app-tv-show-details>
+@if (details(); as tvShowDetails) {
+  <app-tv-show-details [details]="tvShowDetails"></app-tv-show-details>
 } @else {
   <app-error-placeholder
-    [message]="data.resolveErrorMessage"
+    [message]="data().resolveErrorMessage"
   ></app-error-placeholder>
 }
 
@@ -20,6 +20,6 @@
   <app-back-button></app-back-button>
 </div>
 
-<app-dialog #imagesDialog [dialogTitle]="data.details?.name">
-  <div>This is my dialog</div>
+<app-dialog #imagesDialog [dialogTitle]="details()?.name">
+  <app-gallery-slides-show [photos]="gallerySlides()"></app-gallery-slides-show>
 </app-dialog>
