Moved the logic of creating tv show gallery slideshow dialog to directive.

--- a/src/app/features/tv-shows/components/tv-show-table/tv-show-row-actions/tv-show-row-actions.component.html
+++ b/src/app/features/tv-shows/components/tv-show-table/tv-show-row-actions/tv-show-row-actions.component.html
@@ -20,7 +20,7 @@
   <button
     appButton="transparent"
     class="!p-1"
-    (click)="showGalleryDialog()"
+    [appOpenTvShowGallery]="tvShow.id"
     [attr.data-test-id]="'action-gallery-' + tvShow.id"
   >
     <app-arrow-top-right-on-square-icon
