--- a/src/app/pages/details-page/details-page.component.html
+++ b/src/app/pages/details-page/details-page.component.html
@@ -9,22 +9,15 @@
 <div class="mt-4 flex flex-row gap-4">
   @if (details(); as details) {
     @if (details.pictures.length) {
-      <div>
-        <button
-          appButton="primary"
-          class="gap-4 !px-4"
-          [appToggleDialog]="galleryDialog.dialog"
-        >
-          <app-photo-icon cssClass="size-4"></app-photo-icon>
+      <button
+        appButton="primary"
+        class="gap-4 !px-4"
+        [appOpenTvShowGallery]="details.id"
+      >
+        <app-photo-icon cssClass="size-4"></app-photo-icon>
 
-          <span>Show images</span>
-        </button>
-
-        <app-tv-show-gallery-dialog
-          #galleryDialog
-          [tvShow]="details"
-        ></app-tv-show-gallery-dialog>
-      </div>
+        <span>Show images</span>
+      </button>
     }
   }
 
