Configured alt text for preview image in slideshow gallery.

--- a/src/app/shared/gallery-slides-show/gallery-slides-show.component.html
+++ b/src/app/shared/gallery-slides-show/gallery-slides-show.component.html
@@ -1,7 +1,7 @@
 <div class="slides-show">
   <div class="active-slide">
     @if (activePhoto(); as photo) {
-      <img [src]="photo.url" class="flex-1 object-contain" />
+      <img [src]="photo.url" class="flex-1 object-contain" alt="Movie photo" />
     }
   </div>
 
