--- a/src/app/shared/gallery-slides-show/gallery-slides-show.component.css
+++ b/src/app/shared/gallery-slides-show/gallery-slides-show.component.css
@@ -3,7 +3,7 @@
 }
 
 .active-slide {
-  @apply size-96 flex rounded-lg bg-gray-100;
+  @apply size-96 max-w-[90%] flex rounded-lg bg-gray-100;
 }
 
 .slides {
@@ -11,7 +11,7 @@
 }
 
 .slides ul {
-  @apply flex flex-row gap-1 overflow-hidden w-full;
+  @apply flex flex-row gap-1 w-full overflow-x-auto scrollbar-none;
 }
 
 li.slide {
