--- a/src/styles.css
+++ b/src/styles.css
@@ -40,3 +40,16 @@ body {
 .app-form-control.ng-invalid.ng-dirty {
   @apply border-red-300 focus:ring-red-200;
 }
+
+/* Pretty scrollbars */
+html, html * {
+  @apply scrollbar-track-gray-200 scrollbar-thumb-gray-400;
+}
+
+html {
+  @apply scrollbar;
+}
+
+html * {
+  @apply scrollbar-thin;
+}
