CSS Styles for dialogs.

--- a/src/app/features/tv-shows/components/tv-show-search-form/tv-show-search-form.component.html
+++ b/src/app/features/tv-shows/components/tv-show-search-form/tv-show-search-form.component.html
@@ -16,7 +16,9 @@
         class="flex-1 min-w-12"
       />
 
-      <button appButton="primary" (click)="onSubmitSearch()">Search</button>
+      <button appButton="primary" (click)="onSubmitSearch()" title="Search">
+        Search
+      </button>
     </div>
   </div>
 </form>
