--- a/src/app/features/tv-shows/components/tv-show-table/tv-show-row-actions/tv-show-row-actions.component.html
+++ b/src/app/features/tv-shows/components/tv-show-table/tv-show-row-actions/tv-show-row-actions.component.html
@@ -3,7 +3,7 @@
     appButton="transparent"
     class="!p-1"
     [routerLink]="detailsLink"
-    [title]="tvShow.name"
+    title="Details"
   >
     <app-info-circle-icon cssClass="size-5"></app-info-circle-icon>
   </a>
