--- a/src/app/shared/dialogs/components/dialog/dialog.component.css
+++ b/src/app/shared/dialogs/components/dialog/dialog.component.css
@@ -1,3 +1,11 @@
+dialog {
+  @apply rounded shadow-xl;
+}
+
+dialog::backdrop {
+  @apply bg-gray-600 bg-opacity-25 backdrop-blur-sm;
+}
+
 .dialog-header {
   @apply flex flex-row gap-8 items-center justify-between;
   @apply text-gray-600;
