Utilizing transloco in shows table component

--- a/src/app/features/tv-shows/components/tv-show-table/tv-show-row-actions/tv-show-row-actions.component.html
+++ b/src/app/features/tv-shows/components/tv-show-table/tv-show-row-actions/tv-show-row-actions.component.html
@@ -3,7 +3,7 @@
     appButton="transparent"
     class="!p-1"
     [routerLink]="detailsLink"
-    title="Details"
+    [title]="DETAILS_LABEL | transloco"
   >
     <app-info-circle-icon cssClass="size-5"></app-info-circle-icon>
   </a>
@@ -20,6 +20,7 @@
   <button
     appButton="transparent"
     class="!p-1"
+    [title]="WISHLIST_ADD | transloco"
     [attr.data-test-id]="'action-wishlist-' + tvShow.id"
   >
     <app-clipboard-document-list-icon
