--- a/src/app/shared/paginator/paginator.component.html
+++ b/src/app/shared/paginator/paginator.component.html
@@ -24,7 +24,7 @@
   </div>
 
   <div class="flex flex-row gap-1 items-center">
-    @for (pageNumber of pageButtons(); track pageNumber) {
+    @for (pageNumber of pageButtons(); let index = $index; track index) {
       @if (pageNumber === currentPage()) {
         <button
           appButton="primary"
