Adding shows to wishlist.

--- a/src/app/features/tv-shows/components/tv-show-card/tv-show-card.component.html
+++ b/src/app/features/tv-shows/components/tv-show-card/tv-show-card.component.html
@@ -35,7 +35,9 @@
     </div>
   </ng-template>
 
-  <ng-template #footer>
-    {{ tvShow() | nextEpisodeCountdown }}
-  </ng-template>
+  @if (tvShowDetails(); as details) {
+    <ng-template #footer>
+      {{ details | nextEpisodeCountdown }}
+    </ng-template>
+  }
 </app-card>
