--- a/src/app/features/tv-shows/components/tv-show-table/tv-show-row-actions/tv-show-row-actions.component.html
+++ b/src/app/features/tv-shows/components/tv-show-table/tv-show-row-actions/tv-show-row-actions.component.html
@@ -20,6 +20,7 @@
   <button
     appButton="transparent"
     class="!p-1"
+    [appToggleWishlist]="tvShow"
     [title]="WISHLIST_ADD | transloco"
     [attr.data-test-id]="'action-wishlist-' + tvShow.id"
   >
