--- a/src/app/features/wishlist/components/wishlist-shows/wishlist-shows.component.html
+++ b/src/app/features/wishlist/components/wishlist-shows/wishlist-shows.component.html
@@ -1,8 +1,8 @@
-@if (favorites().length) {
+@if (shows().length) {
   <div
     class="grid gap-4 grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5 2xl:grid-cols-6"
   >
-    @for (oneTvShow of favorites(); track oneTvShow.id) {
+    @for (oneTvShow of shows(); track oneTvShow.id) {
       <app-tv-show-card [tvShow]="oneTvShow"></app-tv-show-card>
     }
   </div>
