--- a/src/app/shared/placeholders/empty-collection-placeholder/empty-collection-placeholder.component.html
+++ b/src/app/shared/placeholders/empty-collection-placeholder/empty-collection-placeholder.component.html
@@ -1,3 +1,3 @@
 <p class="text-center font-normal text-gray-500 border-4 p-4">
-  {{ message ?? DEFAULT_MESSAGE }}
+  {{ message ?? DEFAULT_MESSAGE | transloco }}
 </p>
