--- a/src/app/features/tv-shows/pages/favorites-page/favorites-page.component.html
+++ b/src/app/features/tv-shows/pages/favorites-page/favorites-page.component.html
@@ -1,1 +1,3 @@
-<app-favorite-tv-shows-list></app-favorite-tv-shows-list>
+<app-favorite-tv-shows-list
+  [favorites]="favorites()"
+></app-favorite-tv-shows-list>
