--- a/src/app/features/wishlist/components/wishlist-shows/wishlist-shows.component.html
+++ b/src/app/features/wishlist/components/wishlist-shows/wishlist-shows.component.html
@@ -1,12 +1,4 @@
-@if (shows().length) {
-  <div
-    class="grid gap-4 grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5 2xl:grid-cols-6"
-  >
-    @for (oneTvShow of shows(); track oneTvShow.id) {
-      <app-tv-show-card [tvShow]="oneTvShow"></app-tv-show-card>
-    }
-  </div>
-} @else {
-  <app-empty-collection-placeholder [message]="EMPTY_MESSAGE | transloco">
-  </app-empty-collection-placeholder>
-}
+<app-tv-shows-list
+  [shows]="shows()"
+  [emptyMessage]="EMPTY_MESSAGE"
+></app-tv-shows-list>
