Configurable actions for tv show card component

--- a/src/app/features/tv-shows/components/favorite-tv-shows-list/favorite-tv-shows-list.component.html
+++ b/src/app/features/tv-shows/components/favorite-tv-shows-list/favorite-tv-shows-list.component.html
@@ -1,4 +1,5 @@
 <app-tv-shows-list
   [shows]="favorites()"
   [emptyMessage]="EMPTY_MESSAGE"
+  [actions]="['toggleFavorite', 'details']"
 ></app-tv-shows-list>
