--- a/src/app/features/tv-shows/components/tv-shows-list/tv-shows-list.component.html
+++ b/src/app/features/tv-shows/components/tv-shows-list/tv-shows-list.component.html
@@ -3,7 +3,10 @@
     class="grid gap-4 grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5 2xl:grid-cols-6"
   >
     @for (oneTvShow of shows(); track oneTvShow.id) {
-      <app-tv-show-card [tvShow]="oneTvShow"></app-tv-show-card>
+      <app-tv-show-card
+        [tvShow]="oneTvShow"
+        [actions]="actions()"
+      ></app-tv-show-card>
     }
   </div>
 } @else {
